# QOsis

./: .gitignore  CMakeLists.txt  QOsis.pro  README.md  version.h  version.h.in
cli/: CMakeLists.txt  version.h  version.h.in
gui/: CMakeLists.txt
gui/src/: mainwindow.cpp  mainwindow.h  mainwindow.ui  version.h  version.h.in
lib/: CMakeLists.txt  qosis-config.cmake.in  qosis.pc  version.h  version.h.in
lib/src/: qosis.cpp  qosis.h  qosis.pc  qosis.pc.in  qosis_global.h  qosiscommons.cpp  qosiscommons.h  qosisexporter.cpp  qosisexporter.h  qosisglobals.h  qosisimporter.cpp  qosisimporter.h  qosisjson.cpp  qosisjson.h  qosismeta.cpp  qosismeta.h  qosisreader.cpp  qosisreader.h  qosisvalidator.cpp  qosisvalidator.h  qosiswriter.cpp  qosiswriter.h  version.h
tests/: CMakeLists.txt  qosis-files.qrc  qosis-testfile.xml  singletonbook.cpp  singletonbook.h  test_runner.cpp  variables.h
tests/suite/: test_xml_exporter.cpp  test_xml_exporter.h  test_xml_importer.cpp  test_xml_importer.h  test_xml_json.cpp  test_xml_json.h  test_xml_meta.cpp  test_xml_meta.h  test_xml_reader.cpp  test_xml_reader.h  test_xml_validator.cpp  test_xml_validator.h  test_xml_writer.cpp  test_xml_writer.h
